# tax

./: .gitignore  CLAUDE.md  EquityTax_Reconciler_Plan.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: accountant.md  python-engineer.md  tax-expert-cpa.md  tax-planner.md
.claude/chat/: template.md
.claude/skills/: ui-test.md
.github/workflows/: ci.yml
app/: __init__.py  chat.py  cli.py  exceptions.py  wizard.py
app/db/: __init__.py  migrations.py  repository.py  schema.py
app/engines/: __init__.py  basis.py  brackets.py  espp.py  estimator.py  iso_amt.py  lot_matcher.py  reconciliation.py  strategy.py
app/ingestion/: __init__.py  base.py  manual.py  robinhood.py  shareworks.py
app/models/: __init__.py  data_gaps.py  deductions.py  enums.py  equity_event.py  reports.py  tax_forms.py
app/normalization/: __init__.py  events.py  ledger.py
app/parsing/: __init__.py  base.py  detector.py  redactor.py  vision.py  vision_prompts.py
app/reports/: __init__.py  amt_worksheet.py  espp_report.py  form8949.py  reconciliation.py  strategy_report.py  tax_summary.py
plans/: comprehensive-build-plan.md  import-pipeline.md  itemized-deductions.md  reconciliation-engine.md  remaining-tax-features.md  system-infrastructure.md  tax-estimator.md  tax-strategy.md
tests/: conftest.py  test_chat.py  test_cli.py  test_cli_import.py  test_wizard.py
tests/test_engines/: test_additional_medicare.py  test_amt_computation.py  test_basis.py  test_basis_espp.py  test_basis_iso.py  test_brackets.py  test_capital_loss_carryover.py  test_data_gaps.py  test_espp.py  (+10 more)
(+36 files in other folders)
