[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equitytax-reconciler"
version = "0.1.0"
description = "Tax reconciliation system for equity compensation (ESPP, RSUs, NSOs, ISOs)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pandas>=2.0,<3.0",
    "typer>=0.9,<1.0",
    "jinja2>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "ruff>=0.1",
]

[project.scripts]
equitytax = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
